[package]
name = "dnf_helper_rust"
version = "1.0.0"
edition = "2021"
authors = ["DNF Helper Team"]
description = "DNF 游戏辅助工具 - Rust 重构版本"

[dependencies]
# Windows API 调用
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
]}

# 日志
log = "0.4"
env_logger = "0.10"

# 配置解析
ini = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 线程同步
parking_lot = "0.12"

# 懒加载
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
# Windows 特定依赖
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "memoryapi",
    "winuser",
    "winioctl",
    "handleapi",
    "errhandlingapi",
]}

[[bin]]
name = "dnf_helper"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
